Updated description of day 7, minor refactoring